2005-11-24  Chong Yidong  <cyd@stupidchicken.com>

	* hi-lock.el (hi-lock-buffer-mode): Renamed from `hi-lock-mode'.
	Use define-minor-mode, and make it a local mode.  Turn on
	font-lock.
	(hi-lock-mode): New global minor mode.
	(turn-on-hi-lock-if-enabled): New function.
	(hi-lock-line-face-buffer, hi-lock-face-buffer)
	(hi-lock-set-pattern): Changed arguments to regexp and face
	instead of a font-lock pattern.  Directly set face property,
	instead of refontifying.
	(hi-lock-font-lock-hook): Check if font-lock is being turned on.
	(hi-lock-find-patterns): Use line-number-at-pos.

	(hi-lock-face-phrase-buffer): Call hi-lock-buffer-mode.  Use new
	arguments for hi-lock-set-pattern.
	(hi-lock-unface-buffer, hi-lock-set-file-patterns): Call
	font-lock-fontify-buffer.
	(hi-lock-find-file-hook, hi-lock-current-line)
	(hi-lock-refontify, hi-lock-set-patterns): Deleted unused
	functions.

	(hi-lock-font-lock-hook): Turn off hi-lock when font lock is
	turned off.

	* progmodes/compile.el (compilation-setup): Don't fiddle with
	font-lock-defaults.

2005-11-25  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-create-handler)
	(gdb-var-list-children-handler): Find values for all variable
	objects.  gud-speedbar-buttons decides whether to display them.

2005-11-24  Romain Francoise  <romain@orebokech.com>

	* info.el (Info-speedbar-fetch-file-nodes): Prefix temporary
	buffer name with a space.

2005-11-24  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el: (org-export-plain-list-max-depth): Renamed
	from `org-export-local-list-max-depth'.  Default values changed to
	3.
	(org-auto-renumber-ordered-lists,
	org-plain-list-ordered-item-terminator): New options.
	(org-at-item-p, org-beginning-of-item, org-end-of-item,
	org-get-indentation, org-get-string-indentation,
	org-maybe-renumber-ordered-list, org-renumber-ordered-list): New
	functions.
	(org-move-item-down, org-move-item-up): New commands.